# garbo

./: CMakeLists.txt  DOCKER_USAGE.md  Environment notes  README.md  package.xml  robot_core notes.txt
config/: apriltag.yaml  bridge_config.yaml  docking_params.yaml  docks.yaml  ekf.yaml  gz_bridge.yaml  joystick.yaml  map_server_params.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  scratch  twist_mux.yaml  twist_mux_topics.yaml
description/: XXXgazebo_control.xacro  camera.xacro  contact_switch.xacro  depth_camera.xacro  garbo_description.sdf  garbo_description.urdf  gazebo_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  rear_camera.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
docker/: Dockerfile  docker-compose.yaml
launch/: display.launch.py  joystick.launch.py  launch_sim.launch.py  nav2_localization_launch.py  nav2_navigation_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  slam.launch.py  slam_localization_launch.py  twist_mux_launch.py  yaml_map_launch.py
nodes/: detected_dock_pose_publisher.cpp  dock_pose_publisher.cpp  multi_dock_pose_publisher.cpp
rviz/: config.rviz
world/: driveway.posegraph  driveway.sdf  driveway2.sdf  driveway_costmap.pgm  driveway_edited.pgm  driveway_edited.yaml  driveway_raw.pgm  driveway_raw.yaml
world/models/Apriltag36_11_00000/: model.sdf
world/models/Apriltag36_11_00001/: model.config  model.sdf
world/models/Apriltag36_11_00002/: model.config  model.sdf
world/models/Apriltag36_11_00003/: model.config  model.sdf
world/models/Apriltag36_11_00004/: model.config  model.sdf
worlds/: testV1.sdf
worlds/Driveway/: driveway.data  driveway.sdf  driveway_costmap.yaml  driveway_edited.pgm  driveway_edited.yaml
(+6 files in other folders)
